--- a/egg_model/config/egg_parameters.yml
+++ b/egg_model/config/egg_parameters.yml
@@ -4,19 +4,18 @@ flownet:
   data_source:
     input_case: ../input_model/EGG_MODEL_ECL
   cell_length: 10
-  additional_flow_nodes: 100
+  additional_flow_nodes: 50
   additional_node_candidates: 1000
   hull_factor: 1.2
-  random_seed: 123456
+  random_seed: 999
   perforation_handling_strategy: bottom_point #bottom_point #multiple
   fast_pyscal: True
-  training_set_fraction: 1 # Fraction of observations (from 0 to 1) to use as training data
+  training_set_fraction: 0.8 # Fraction of observations (from 0 to 1) to use as training data
   fault_tolerance: 0.1
-  
 ert:
-  static_include_files: ../input_model
+  static_include_files: ../input_model/
   realizations:
-    num_realizations: 200
+    num_realizations: 250
     required_success_percent: 80
     max_runtime: 600
   queue:
@@ -30,24 +29,27 @@ ert:
     - 1
     - 1
     - 1
-
+    - 1
+    - 1
+    - 1
+   
 model_parameters:
   permeability:
     min: 10
     max: 10000
-  porosity: 
-    min: 0.05
-    max: 0.3
+  porosity:
+    min: 0.01
+    max: 0.35
   bulkvolume_mult:
     min: 1
-    max: 30
+    max: 20
   relative_permeability:
     scheme: global
     swirr:
       min: 0.05
-      max: 0.1
+      max: 0.15
     swl:
-      min: 0.1
+      min: 0.05
       max: 0.15
     swcr:
       min: 0.15
@@ -70,8 +72,8 @@ model_parameters:
   equil:
     datum_depth: 4000
     datum_pressure:
-      min: 400
-      max: 400.1
+      min: 380
+      max: 420
     owc_depth:
-      min: 5000
-      max: 5000.1    
+      min: 4980
+      max: 5020
