--- a/norne/ci_config/assisted_history_matching.yml
+++ b/norne/ci_config/assisted_history_matching.yml
@@ -2,35 +2,34 @@ name: Norne
 
 flownet:
   data_source:
-    eclipse_case: ../tests/data/norne/NORNE_ATW2013
-  pvt:
-    rsvd: ./examples/norne_static/rsvd.csv
+    input_case: ../input_model/norne/NORNE_ATW2013
+  phases:
+    - oil
+    - gas
+    - vapoil
+    - disgas
+    - water
   cell_length: 100
   additional_flow_nodes: 100
   additional_node_candidates: 1000
   hull_factor: 1.2
-  random_seed: 123456
+  random_seed: 999
   perforation_handling_strategy: bottom_point
   fast_pyscal: True
   training_set_end_date: 2005-01-31 #YYYY-MM-DD. If defined training set fraction is calculated from this date
   fault_tolerance: 0.1
 
 ert:
-  static_include_files: ./norne_static
+  static_include_files: ../config/norne_static
   realizations:
-    num_realizations: 10
-    required_success_percent: 70
-    max_runtime: 600   # Maximum runtime of on single realization in seconds
+    num_realizations: 2
+    required_success_percent: 40
+    max_runtime: 600
   queue:
-    system: LOCAL   # LOCAL or LSF
-    name: mr   # ignored when system is LOCAL
-    max_running: 10   # Maximum number of simultaneous runs
+    system: LOCAL
+    name: mr
+    max_running: 2
   ensemble_weights:
-    - 4
-    - 3
-    - 2
-    - 1
-    - 1
     - 1
 
 model_parameters:
@@ -38,15 +37,14 @@ model_parameters:
     min: 0.1
     max: 5000
   porosity:
-    min: 0.01
-    max: 0.4
+    min: 0.05
+    max: 0.3
   bulkvolume_mult:
-    mean: 1
-    max: 2
+    mean: 0.17
+    max: 0.68
   fault_mult:
-    min: 1.0e-3
-    max: 1
-    loguniform: True
+    min: 0.9
+    max: 1.1
   relative_permeability:
     scheme: global
     swirr:
@@ -92,7 +90,7 @@ model_parameters:
       min: 1.5
       max: 2.0
   equil:
-    scheme: individual
+    datum_depth: 2575
     datum_pressure:
       min: 250
       max: 275
@@ -111,6 +109,6 @@ model_parameters:
     fraction: 0.25
     delta_depth: 1000
     size_in_bulkvolumes:
-      min: 1.0e-6
+      min: 1
       max: 2
       loguniform: True
