--- a/egg/ci_config/assisted_history_matching.yml
+++ b/egg/ci_config/assisted_history_matching.yml
@@ -16,7 +16,7 @@ flownet:
   training_set_fraction: 0.8 # Fraction of observations (from 0 to 1) to use as training data
   fault_tolerance: 0.1
 ert:
-  static_include_files: ../config/norne_static
+  static_include_files: ../config/egg_static
   realizations:
     num_realizations: 2
     required_success_percent: 80
