--- a/egg/ci_config/prediction.yml
+++ b/egg/ci_config/prediction.yml
@@ -1,11 +1,11 @@
-name: Norne
+name: Egg
 
 ert:
   static_include_files: ../config/egg_static
   pred_schedule_file: ./trivial_prediction_schedule.sch  
   realizations:
     num_realizations: 2
-    required_success_percent: 20
+    required_success_percent: 80
     max_runtime: 300 # Maximum runtime of on single realization in seconds
   simulator:
     name: Flow
