--- a/egg/config/prediction.yml
+++ b/egg/config/prediction.yml
@@ -11,4 +11,5 @@ ert:
     name: Flow
   queue:
     system: LOCAL # LOCAL or LSF
+    name: mr
     max_running: 10 # Maximum number of simultaneous runs
