--- a/egg/ci_config/prediction.yml
+++ b/egg/ci_config/prediction.yml
@@ -11,4 +11,5 @@ ert:
     name: Flow
   queue:
     system: LOCAL # LOCAL or LSF
+    name: mr
     max_running: 2 # Maximum number of simultaneous runs
