--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -3,7 +3,7 @@ name: Norne
 flownet:
   data_source:
     input_case: ../input_model/norne/NORNE_ATW2013
-    concave_hull: True
+    concave_hull: true
   phases:
     - oil
     - gas
@@ -18,8 +18,8 @@ flownet:
   hull_factor: 1.2
   random_seed: 123456
   perforation_handling_strategy: bottom_point
-  fast_pyscal: True
-  training_set_end_date: 2005-01-31 #YYYY-MM-DD. If defined training set fraction is calculated from this date
+  fast_pyscal: true
+  training_set_end_date: 2005-01-31  # YYYY-MM-DD. If defined training set fraction is calculated from this date
   fault_tolerance: 0.1
   max_distance_fraction: 0.15
 
@@ -54,7 +54,7 @@ model_parameters:
   fault_mult:
     min: 1.0e-3
     max: 1
-    loguniform: True
+    loguniform: true
   relative_permeability:
     scheme: global
     swirr:
@@ -121,4 +121,4 @@ model_parameters:
     size_in_bulkvolumes:
       min: 1.0e-6
       max: 2
-      loguniform: True
+      loguniform: true
