Add new perforation strategy to Norne

--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -34,7 +34,7 @@ flownet:
   additional_node_candidates: 1000
   hull_factor: 1.2
   random_seed: 123456
-  perforation_handling_strategy: bottom_point
+  perforation_handling_strategy: time_avg_open_location
   fast_pyscal: true
   training_set_end_date: 2005-01-31  # YYYY-MM-DD. If defined training set fraction is calculated from this date
   fault_tolerance: 0.1
