--- a/egg/ci_config/assisted_history_matching.yml
+++ b/egg/ci_config/assisted_history_matching.yml
@@ -30,8 +30,9 @@ flownet:
   random_seed: 999
   perforation_handling_strategy: bottom_point  # bottom_point #multiple
   fast_pyscal: true
-  training_set_fraction: 0.8  # Fraction of observations (from 0 to 1) to use as training data
+  training_set_fraction: 0.8  # Fraction of observations to use as training data
   fault_tolerance: 0.1
+
 ert:
   static_include_files: ../config/egg_static
   realizations:
@@ -44,6 +45,12 @@ ert:
     max_running: 2
   ensemble_weights:
     - 1
+  analysis:
+    metric: "[RMSE,MAE]"
+    quantity: "[WOPR:PROD,WWPR:PROD]"
+    start: "2011-01-01"
+    end: "2016-06-01"
+    outfile: analysis_metrics_iteration
 
 model_parameters:
   permeability:
