--- a/norne/ci_config/assisted_history_matching.yml
+++ b/norne/ci_config/assisted_history_matching.yml
@@ -50,6 +50,12 @@ ert:
     max_running: 2
   ensemble_weights:
     - 1
+  analysis:
+    metric: "[RMSE,MAE]"
+    quantity: "[WOPR:B-,WWPR:B-]"
+    start: "1997-11-06"
+    end: "2005-01-31"
+    outfile: analysis_metrics_iteration
 
 model_parameters:
   permeability:
