--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -3,6 +3,7 @@ name: Norne
 flownet:
   data_source:
     simulation:
+      well_logs: false
       input_case: ../input_model/norne/NORNE_ATW2013
       vectors:
         WTHP:
@@ -37,19 +38,19 @@ flownet:
   perforation_handling_strategy: time_avg_open_location
   fast_pyscal: true
   training_set_end_date: 2005-01-31  # YYYY-MM-DD. If defined training set fraction is calculated from this date
-  fault_tolerance: 0.1
-  max_distance_fraction: 0.15
+  fault_tolerance: 0.0001
+  max_distance_fraction: 0.10
 
 ert:
   static_include_files: ./norne_static
   realizations:
-    num_realizations: 10
-    required_success_percent: 70
+    num_realizations: 250
+    required_success_percent: 50
     max_runtime: 600   # Maximum runtime of on single realization in seconds
   queue:
     system: LOCAL   # LOCAL or LSF
     name: mr   # ignored when system is LOCAL
-    max_running: 10   # Maximum number of simultaneous runs
+    max_running: 70   # Maximum number of simultaneous runs
   ensemble_weights:
     - 4
     - 3
@@ -57,23 +58,27 @@ ert:
     - 1
     - 1
     - 1
+    - 1
+    - 1
+    - 1
+    - 1
 
 model_parameters:
   permeability:
-    min: 0.1
-    max: 5000
+    min: 10
+    max: 1000
   porosity:
-    min: 0.01
-    max: 0.4
+    min: 0.05
+    max: 0.35
   bulkvolume_mult:
-    mean: 1
-    max: 2
+    min: 0.1
+    max: 20
   fault_mult:
-    min: 1.0e-3
+    min: 1.0e-5
     max: 1
     loguniform: true
   relative_permeability:
-    scheme: global
+    scheme: individual
     swirr:
       min: 0.01
       max: 0.04
@@ -81,23 +86,23 @@ model_parameters:
       min: 0.05
       max: 0.09
     swcr:
-      min: 0.30
-      max: 0.35
+      min: 0.1
+      max: 0.3
     sorw:
       min: 0.2
       max: 0.3
     sorg:
-      min: 0.4
-      max: 0.5
+      min: 0.1
+      max: 0.2
     sgcr:
       min: 0.03
       max: 0.08
     krwend:
-      min: 0.5
-      max: 0.7
+      min: 0.4
+      max: 0.6
     krowend:
-      min: 0.3
-      max: 0.5
+      min: 0.9
+      max: 1.0
     krgend:
       min: 0.9
       max: 1.0
@@ -105,37 +110,37 @@ model_parameters:
       min: 0.9
       max: 1.0
     nw:
-      min: 0.5
-      max: 2.5
+      min: 1.5
+      max: 3.0
     now:
-      min: 0.5
-      max: 1.0
+      min: 1.5
+      max: 3.0
     ng:
-      min: 1.0
-      max: 1.5
+      min: 1.5
+      max: 3.0
     nog:
       min: 1.5
-      max: 2.0
+      max: 3.0
   equil:
     scheme: individual
     datum_pressure:
-      min: 250
-      max: 275
-    owc_depth:
-      min: 2675
-      max: 2725
+      min: 240
+      max: 270
     goc_depth:
-      min: 2575
-      max: 2600
-  rock_compressibility:
-    reference_pressure: 277
-    min: 4.8e-5
-    max: 5.2e-5
-  aquifer:
-    scheme: individual
-    fraction: 0.25
-    delta_depth: 1000
-    size_in_bulkvolumes:
-      min: 1.0e-6
-      max: 2
-      loguniform: true
+      min: 2450
+      max: 2590
+    owc_depth:
+      min: 2601
+      max: 2700
+#  rock_compressibility:
+#    reference_pressure: 277
+#    min: 4.8e-5
+#    max: 5.2e-5
+#  aquifer:
+#    scheme: individual
+#    fraction: 0.25
+#    delta_depth: 1000
+#    size_in_bulkvolumes:
+#      min: 1.0e-6
+#      max: 2
+#      loguniform: true
