--- a/norne/ci_config/assisted_history_matching.yml
+++ b/norne/ci_config/assisted_history_matching.yml
@@ -14,7 +14,7 @@ flownet:
         WGPR:
           rel_error: 0.1
           min_error: 100000
-    concave_hull: false
+    concave_hull: true
   phases:
     - oil
     - gas
@@ -103,16 +103,79 @@ model_parameters:
       min: 1.5
       max: 2.0
   equil:
-    datum_depth: 2575
-    datum_pressure:
-      min: 250
-      max: 275
-    owc_depth:
-      min: 2675
-      max: 2725
-    goc_depth:
-      min: 2575
-      max: 2600
+    scheme: individual
+    regions:
+      -
+        datum_depth: 2571
+        datum_pressure:
+          min: 251
+          max: 271
+        owc_depth:
+          min: 2671
+          max: 2721
+        goc_depth:
+          min: 2571
+          max: 2601
+      -
+        id: 1
+        datum_depth: 2572
+        datum_pressure:
+          min: 252
+          max: 272
+        owc_depth:
+          min: 2672
+          max: 2722
+        goc_depth:
+          min: 2572
+          max: 2602
+      -
+        id: 2
+        datum_depth: 2573
+        datum_pressure:
+          min: 253
+          max: 273
+        owc_depth:
+          min: 2673
+          max: 2723
+        goc_depth:
+          min: 2573
+          max: 2603
+      -
+        id: 3
+        datum_depth: 2574
+        datum_pressure:
+          min: 254
+          max: 274
+        owc_depth:
+          min: 2674
+          max: 2724
+        goc_depth:
+          min: 2574
+          max: 2604
+      -
+        id: 4
+        datum_depth: 2575
+        datum_pressure:
+          min: 250
+          max: 275
+        owc_depth:
+          min: 2675
+          max: 2725
+        goc_depth:
+          min: 2575
+          max: 2600
+      -
+        id: 5
+        datum_depth: 2576
+        datum_pressure:
+          min: 256
+          max: 276
+        owc_depth:
+          min: 2676
+          max: 2726
+        goc_depth:
+          min: 2576
+          max: 2600
   rock_compressibility:
     reference_pressure: 277
     min: 4.8e-5
