--- a/egg/config/assisted_history_matching.yml
+++ b/egg/config/assisted_history_matching.yml
@@ -81,10 +81,12 @@ model_parameters:
       min: 2.5
       max: 5.5
   equil:
-    datum_depth: 4000
-    datum_pressure:
-      min: 380
-      max: 420
-    owc_depth:
-      min: 4980
-      max: 5020
+    regions:
+      -
+        datum_depth: 4000
+        datum_pressure:
+          min: 380
+          max: 420
+        owc_depth:
+          min: 4980
+          max: 5020
