--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -114,6 +114,17 @@ model_parameters:
     scheme: regions_from_sim
     regions:
       -
+        datum_depth: 2575
+        datum_pressure:
+          min: 250
+          max: 275
+        owc_depth:
+          min: 2675
+          max: 2725
+        goc_depth:
+          min: 2575
+          max: 2600
+      -      -
         id: 1
         datum_depth: 2575
         datum_pressure:
