--- a/norne/ci_config/assisted_history_matching.yml
+++ b/norne/ci_config/assisted_history_matching.yml
@@ -103,7 +103,7 @@ model_parameters:
       min: 1.5
       max: 2.0
   equil:
-    scheme: individual
+    scheme: regions_from_sim
     regions:
       -
         datum_depth: 2575
@@ -116,7 +116,7 @@ model_parameters:
         goc_depth:
           min: 2575
           max: 2600
-      -      -
+      -
         id: 1
         datum_depth: 2575
         datum_pressure:
