--- a/egg/config/assisted_history_matching.yml
+++ b/egg/config/assisted_history_matching.yml
@@ -81,7 +81,7 @@ model_parameters:
       min: 2.5
       max: 5.5
   equil:
-    regions:
+    eqlnum_region:
       -
         datum_depth: 4000
         datum_pressure:
