--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -112,8 +112,9 @@ model_parameters:
       max: 2.0
   equil:
     scheme: regions_from_sim
-    eqlnum_region:
-      - datum_depth: 2575
+    regions:
+      - id: None
+        datum_depth: 2575
         datum_pressure:
           min: 250
           max: 275
