--- a/brugge/config/assisted_history_matching.yml
+++ b/brugge/config/assisted_history_matching.yml
@@ -67,30 +67,32 @@ model_parameters:
     loguniform: True
   relative_permeability:
     scheme: global
-    swirr:
-      min: 0.0
-      max: 0.05
-    swl:
-      min: 0.2
-      max: 0.55
-    swcr:
-      min: 0.0
-      max: 0.05
-    sorw:
-      min: 0.1
-      max: 0.2
-    krwend:
-      min: 0.5
-      max: 0.7
-    krowend:
-      min: 0.3
-      max: 0.5
-    nw:
-      min: 1.5
-      max: 3.5
-    now:
-      min: 2.0
-      max: 4.5
+    regions:
+      - id: None
+        swirr:
+          min: 0.0
+          max: 0.05
+        swl:
+          min: 0.2
+          max: 0.55
+        swcr:
+          min: 0.0
+          max: 0.05
+        sorw:
+          min: 0.1
+          max: 0.2
+        krwend:
+          min: 0.5
+          max: 0.7
+        krowend:
+          min: 0.3
+          max: 0.5
+        nw:
+          min: 1.5
+          max: 3.5
+        now:
+          min: 2.0
+          max: 4.5  equil:
   equil:
     regions:
       - id: None
