--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -68,48 +68,50 @@ model_parameters:
     loguniform: true
   relative_permeability:
     scheme: global
-    swirr:
-      min: 0.01
-      max: 0.04
-    swl:
-      min: 0.05
-      max: 0.09
-    swcr:
-      min: 0.30
-      max: 0.35
-    sorw:
-      min: 0.2
-      max: 0.3
-    sorg:
-      min: 0.4
-      max: 0.5
-    sgcr:
-      min: 0.03
-      max: 0.08
-    krwend:
-      min: 0.5
-      max: 0.7
-    krowend:
-      min: 0.3
-      max: 0.5
-    krgend:
-      min: 0.9
-      max: 1.0
-    krogend:
-      min: 0.9
-      max: 1.0
-    nw:
-      min: 0.5
-      max: 2.5
-    now:
-      min: 0.5
-      max: 1.0
-    ng:
-      min: 1.0
-      max: 1.5
-    nog:
-      min: 1.5
-      max: 2.0
+    regions:
+      id: None
+      swirr:
+        min: 0.01
+        max: 0.04
+      swl:
+        min: 0.05
+        max: 0.09
+      swcr:
+        min: 0.30
+        max: 0.35
+      sorw:
+        min: 0.2
+        max: 0.3
+      sorg:
+        min: 0.4
+        max: 0.5
+      sgcr:
+        min: 0.03
+        max: 0.08
+      krwend:
+        min: 0.5
+        max: 0.7
+      krowend:
+        min: 0.3
+        max: 0.5
+      krgend:
+        min: 0.9
+        max: 1.0
+      krogend:
+        min: 0.9
+        max: 1.0
+      nw:
+        min: 0.5
+        max: 2.5
+      now:
+        min: 0.5
+        max: 1.0
+      ng:
+        min: 1.0
+        max: 1.5
+      nog:
+        min: 1.5
+        max: 2.0
   equil:
     scheme: regions_from_sim
     regions:
