Simplify CI config

--- a/brugge/ci_config/assisted_history_matching.yml
+++ b/brugge/ci_config/assisted_history_matching.yml
@@ -1,115 +1,8 @@
-name: Brugge
-
-flownet:
-  data_source:
-    simulation:
-      input_case: ../input_model/BRUGGE60K_FY-SF-KM-1-1_JAN2017/BRUGGE60K_FY-SF-KM-1-1
-      vectors:
-        WTHP:
-          rel_error: 0.01
-          min_error: 0.5
-        WBHP:
-          rel_error: 0.01
-          min_error: 2
-        WOPR:
-          rel_error: 0.01
-          min_error: 10
-        WGPR:
-          rel_error: 0.1
-          min_error: 100000
-        WWPR:
-          rel_error: 0.01
-          min_error: 10
-  phases:
-    - oil
-    - water
-  cell_length: 100
-  additional_flow_nodes: 50
-  additional_node_candidates: 1000
-  hull_factor: 0.9
-  random_seed: 123456
-  perforation_handling_strategy: bottom_point # bottom_point, top_point or multiple
-  fast_pyscal: True
-  training_set_end_date: 2010-01-01 #YYYY-MM-DD. If defined training_set_fraction is calculated from this date
-  fault_tolerance: 1.0e-5
+# Note that this file should ONLY contain settings
+# related to getting CI through in a practical amount of time.
+# All other settings should be set in the base configuration file.
 
 ert:
-  static_include_files: ../config/brugge_static
   realizations:
     num_realizations: 2
     required_success_percent: 40
-    max_runtime: 600
-  queue:
-    system: LOCAL
-    name: mr
-    max_running: 5
-  ensemble_weights: [4, 2, 1]
-  analysis:
-    metric: "[RMSE,MAE]"
-    quantity: "[WOPR:BR-P-,WBHP:BR-P-]"
-    start: "2000-01-01"
-    end: "2010-01-01"
-    outfile: analysis_metrics_iteration
-
-model_parameters:
-  permeability:
-    min: 0.1
-    max: 2000
-  porosity:
-    min: 0.05
-    max: 0.3
-  bulkvolume_mult:
-    mean: 0.17
-    max: 0.68
-  fault_mult:
-    min: 1.0e-9
-    max: 1.0e-8
-    loguniform: True
-  relative_permeability:
-    scheme: global
-    swirr:
-      min: 0.0
-      max: 0.05
-    swl:
-      min: 0.2
-      max: 0.55
-    swcr:
-      min: 0.0
-      max: 0.05
-    sorw:
-      min: 0.1
-      max: 0.2
-    krwend:
-      min: 0.5
-      max: 0.7
-    krowend:
-      min: 0.3
-      max: 0.5
-    nw:
-      min: 1.5
-      max: 3.5
-    now:
-      min: 2.0
-      max: 4.5
-  equil:
-    regions:
-      - id: None
-        datum_depth: 1700
-        datum_pressure:
-          min: 160
-          max: 180
-        owc_depth:
-          min: 1600
-          max: 1700
-  rock_compressibility:
-    reference_pressure: 170
-    min: 6.0e-6
-    max: 5.0e-5
-  aquifer:
-    scheme: individual
-    fraction: 0.25
-    delta_depth: 1000
-    size_in_bulkvolumes:
-      min: 1.0e-6
-      max: 2
-      loguniform: True
