--- a/brugge/ci_config/prediction.yml
+++ b/brugge/ci_config/prediction.yml
@@ -1,15 +1,9 @@
-name: Brugge
+# Note that this file should ONLY contain settings
+# related to getting CI through in a practical amount of time.
+# All other settings should be set in the base configuration file.
 
 ert:
-  pred_schedule_file: ./trivial_prediction_schedule.sch
-  static_include_files: ../config/brugge_static
+  pred_schedule_file: ../ci_config/trivial_prediction_schedule.sch
   realizations:
     num_realizations: 2
     required_success_percent: 40
-    max_runtime: 300 # Maximum runtime of on single realization in seconds
-  simulator:
-    name: Flow
-  queue:
-    system: LOCAL # LOCAL or LSF
-    name: mr # ignored when system is LOCAL
-    max_running: 5 # Maximum number of simultaneous runs
