--- a/egg/ci_config/assisted_history_matching.yml
+++ b/egg/ci_config/assisted_history_matching.yml
@@ -1,84 +1,14 @@
-name: Egg
+# Note that this file should ONLY contain settings
+# related to getting CI through in a practical amount of time.
+# All other settings should be set in the base configuration file.
 
 flownet:
-  data_source:
-    simulation:
-      input_case: ../input_model/egg/EGG_MODEL_ECL
-      vectors:
-        WBHP:
-          rel_error: 0.005
-          min_error: 1
-        WOPR:
-          rel_error: 0.01
-          min_error: 1
-  phases:
-    - oil
-    - water
-  cell_length: 10
   additional_flow_nodes: 10
   additional_node_candidates: 100
-  hull_factor: 1.2
-  random_seed: 999
-  perforation_handling_strategy: bottom_point  # bottom_point #multiple
-  fast_pyscal: true
-  training_set_fraction: 0.8  # Fraction of observations (from 0 to 1) to use as training data
-  fault_tolerance: 0.1
 ert:
-  static_include_files: ../config/egg_static
   realizations:
     num_realizations: 2
-    required_success_percent: 80
-    max_runtime: 600
   queue:
-    system: LOCAL
-    name: mr
     max_running: 2
   ensemble_weights:
     - 1
-
-model_parameters:
-  permeability:
-    min: 10
-    max: 10000
-  porosity:
-    min: 0.01
-    max: 0.35
-  bulkvolume_mult:
-    min: 1
-    max: 20
-  relative_permeability:
-    scheme: global
-    swirr:
-      min: 0.01
-      max: 0.2
-    swl:
-      min: 0.01
-      max: 0.2
-    swcr:
-      min: 0.1
-      max: 0.3
-    sorw:
-      min: 0.05
-      max: 0.3
-    krwend:
-      min: 0.5
-      max: 0.7
-    krowend:
-      min: 0.6
-      max: 0.9
-    nw:
-      min: 1.5
-      max: 4.5
-    now:
-      min: 2.5
-      max: 5.5
-  equil:
-    regions:
-      - id: None
-        datum_depth: 4000
-        datum_pressure:
-          min: 380
-          max: 420
-        owc_depth:
-          min: 4980
-          max: 5020
