--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -37,13 +37,13 @@ flownet:
 ert:
   static_include_files: ./norne_static
   realizations:
-    num_realizations: 10
+    num_realizations: 100
     required_success_percent: 70
     max_runtime: 600   # Maximum runtime of on single realization in seconds
   queue:
     system: LOCAL   # LOCAL or LSF
     name: mr   # ignored when system is LOCAL
-    max_running: 10   # Maximum number of simultaneous runs
+    max_running: 2   # Maximum number of simultaneous runs
   ensemble_weights:
     - 4
     - 3
@@ -67,49 +67,62 @@ model_parameters:
     max: 1
     loguniform: true
   relative_permeability:
-    scheme: global
-    swirr:
-      min: 0.01
-      max: 0.04
-    swl:
-      min: 0.05
-      max: 0.09
-    swcr:
-      min: 0.30
-      max: 0.35
-    sorw:
-      min: 0.2
-      max: 0.3
-    sorg:
-      min: 0.4
-      max: 0.5
-    sgcr:
-      min: 0.03
-      max: 0.08
-    krwend:
-      min: 0.5
-      max: 0.7
-    krowend:
-      min: 0.3
-      max: 0.5
-    krgend:
-      min: 0.9
-      max: 1.0
-    krogend:
-      min: 0.9
-      max: 1.0
-    nw:
-      min: 0.5
-      max: 2.5
-    now:
-      min: 0.5
-      max: 1.0
-    ng:
-      min: 1.0
-      max: 1.5
-    nog:
-      min: 1.5
-      max: 2.0
+    scheme: individual
+    interpolate: True
+    regions:
+      - id: None
+        swirr:
+          min: 0.01
+          base: 0.025
+          max: 0.04
+        swl:
+          min: 0.0
+          base: 0.07
+          max: 0.09
+        swcr:
+          min: 0.30
+          base: 0.325
+          max: 0.35
+        sorw:
+          min: 0.2
+          base: 0.25
+          max: 0.3
+        sorg:
+          min: 0.4
+          base: 0.45
+          max: 0.5
+        sgcr:
+          min: 0.03
+          base: 0.055
+          max: 0.08
+        krwend:
+          min: 0.5
+          base: 0.6
+          max: 0.7
+        kroend:
+          min: 0.4
+          base: 0.6
+          max: 0.8
+        krgend:
+          min: 0.9
+          base: 0.95
+          max: 1.0
+        nw:
+          min: 0.5
+          base: 1.5
+          max: 2.5
+        now:
+          min: 0.5
+          base: 0.75
+          max: 1.0
+        ng:
+          min: 1.0
+          base: 1.25
+          max: 1.5
+        nog:
+          min: 1.5
+          base: 1.75
+          max: 2.0
   equil:
     scheme: regions_from_sim
     regions:
