--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -67,7 +67,7 @@ model_parameters:
     max: 1
     loguniform: true
   relative_permeability:
-    scheme: individual
+    scheme: global
     interpolate: True
     regions:
       - id: None
