--- a/brugge/config/assisted_history_matching.yml
+++ b/brugge/config/assisted_history_matching.yml
@@ -29,7 +29,7 @@ flownet:
   hull_factor: 0.9
   random_seed: 123456
   perforation_handling_strategy: bottom_point # bottom_point, top_point or multiple
-  fast_pyscal: True
+  fast_pyscal: true
   training_set_end_date: 2010-01-01 #YYYY-MM-DD. If defined training_set_fraction is calculated from this date
   fault_tolerance: 1.0e-5
 
@@ -64,10 +64,10 @@ model_parameters:
   fault_mult:
     min: 1.0e-9
     max: 1.0e-8
-    loguniform: True
+    loguniform: true
   relative_permeability:
     scheme: regions_from_sim
-    interpolate: True
+    interpolate: true
     regions:
       - id: None
         swirr:
@@ -123,4 +123,4 @@ model_parameters:
     size_in_bulkvolumes:
       min: 1.0e-6
       max: 2
-      loguniform: True
+      loguniform: true
