--- a/egg/config/assisted_history_matching.yml
+++ b/egg/config/assisted_history_matching.yml
@@ -55,7 +55,7 @@ model_parameters:
     min: 1
     max: 20
   relative_permeability:
-    scheme: individual
+    scheme: global
     regions:
       - id: None
         swirr:
