--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -28,8 +28,8 @@ flownet:
   additional_node_candidates: 1000
   hull_factor: 1.2
   random_seed: 123456
-  perforation_handling_strategy: time_avg_open_location
-  fast_pyscal: false
+  perforation_handling_strategy: multiple_based_on_workovers
+  fast_pyscal: true
   training_set_end_date: 2005-01-31
   fault_tolerance: 0.0001
   max_distance_fraction: 0.10
@@ -37,12 +37,12 @@ flownet:
 ert:
   static_include_files: ./norne_static
   realizations:
-    num_realizations: 250
+    num_realizations: 10
     required_success_percent: 20
     max_runtime: 500
   queue:
     system: LOCAL
-    max_running: 20
+    max_running: 1
   ensemble_weights:
     - 4
     - 2
