--- a/egg/config/hyperparameter.yml
+++ b/egg/config/hyperparameter.yml
@@ -19,9 +19,9 @@ flownet:
   additional_node_candidates: 1000
   hull_factor: 1.2
   random_seed: 999
-  perforation_handling_strategy: bottom_point # bottom_point #multiple
+  perforation_handling_strategy: bottom_point
   fast_pyscal: true
-  training_set_fraction: 0.8 # Fraction of observations (from 0 to 1) to use as training data
+  training_set_fraction: 0.8
   fault_tolerance: 0.1
   hyperopt:
     n_runs: 10
