--- a/egg/config/hyperparameter.yml
+++ b/egg/config/hyperparameter.yml
@@ -51,10 +51,10 @@ ert:
     - 1
     - 1
   analysis:
-    metric: "[RMSE,MAE]"
-    quantity: "[WOPR:PROD,WWPR:PROD]"
-    start: "2011-01-01"
-    end: "2016-06-01"
+    metric: [RMSE, MAE]
+    quantity: [WOPR:PROD, WWPR:PROD]
+    start: 2011-01-01
+    end: 2016-06-01
     outfile: analysis_metrics_iteration
 model_parameters:
   permeability:
