changing logunif true to distribution logunif for Brugge

--- a/brugge/config/assisted_history_matching.yml
+++ b/brugge/config/assisted_history_matching.yml
@@ -64,7 +64,7 @@ model_parameters:
   fault_mult:
     min: 1.0e-9
     max: 1.0e-8
-    loguniform: true
+    distribution: logunif
   relative_permeability:
     scheme: global
     regions:
@@ -114,4 +114,4 @@ model_parameters:
     size_in_bulkvolumes:
       min: 1.0e-6
       max: 2
-      loguniform: true
+      distribution: logunif
