--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -81,7 +81,7 @@ model_parameters:
     min: 0.05
     max: 0.35
   bulkvolume_mult:
-    min: 0.5
+    mean: 1.0
     max: 1.5
   fault_mult:
     min: 1.0e-5
