--- a/brugge/config/assisted_history_matching.yml
+++ b/brugge/config/assisted_history_matching.yml
@@ -59,12 +59,12 @@ model_parameters:
     min: 0.05
     max: 0.3
   bulkvolume_mult:
-    mean: 0.17
+    min: 0.17
     max: 0.68
   fault_mult:
     min: 1.0e-9
     max: 1.0e-8
-    loguniform: true
+    distribution: logunif
   relative_permeability:
     scheme: global
     regions:
@@ -114,4 +114,4 @@ model_parameters:
     size_in_bulkvolumes:
       min: 1.0e-6
       max: 2
-      loguniform: true
+      distribution: logunif
