--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -81,12 +81,12 @@ model_parameters:
     min: 0.05
     max: 0.35
   bulkvolume_mult:
-    mean: 0.5
+    mean: 1.0
     max: 1.5
   fault_mult:
     min: 1.0e-5
     max: 1
-    loguniform: true
+    distribution: logunif
   relative_permeability:
     scheme: individual
     interpolate: false
@@ -199,4 +199,4 @@ model_parameters:
     size_in_bulkvolumes:
       min: 1.0e-6
       max: 2
-      loguniform: true
+      distribution: logunif
