--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -77,6 +77,7 @@ model_parameters:
   permeability:
     min: 1
     max: 1000
+    distribution: logunif
   porosity:
     min: 0.05
     max: 0.35
