Fixes yamllint for assisted_history_matching.yml

--- a/norne_simplified/config/assisted_history_matching.yml
+++ b/norne_simplified/config/assisted_history_matching.yml
@@ -14,7 +14,7 @@ flownet:
         WGPR:
           rel_error: 0.1
           min_error: 100000
-      layers: [[1,4],[5,22]]
+      layers: [[1, 4], [5, 22]]
       well_logs: true
     concave_hull: true
   constraining:
