--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -90,7 +90,7 @@ model_parameters:
     distribution: logunif
   relative_permeability:
     scheme: individual
-    interpolate: true
+    interpolate: false
     regions:
       - id: None
         swirr:
