--- a/norne/config/assisted_history_matching.yml
+++ b/norne/config/assisted_history_matching.yml
@@ -15,6 +15,9 @@ flownet:
           rel_error: 0.1
           min_error: 100000
       well_logs: true
+      layers:
+        - [1, 3]
+        - [4, 22]
     concave_hull: true
   constraining:
     kriging:
@@ -40,7 +43,7 @@ flownet:
   pvt:
     rsvd: norne_static/rsvd_multiple.csv
   cell_length: 100
-  additional_flow_nodes: 100
+  additional_flow_nodes: [500, 100]
   additional_node_candidates: 1000
   hull_factor: 1.2
   random_seed: 123456
