--- a/norne_simplified/ci_config/assisted_history_matching.yml
+++ b/norne_simplified/ci_config/assisted_history_matching.yml
@@ -4,7 +4,7 @@
 
 flownet:
   additional_flow_nodes: 2
-  additional_node_candidates: 100
+  additional_node_candidates: [100]
   max_distance_fraction: 0.05
   constraining:
     kriging:
