--- a/experiments/norne_simplified/geometry_related/config/exp00_base_case.yml
+++ b/experiments/norne_simplified/geometry_related/config/exp00_base_case.yml
@@ -29,7 +29,7 @@ flownet:
   pvt:
     rsvd: norne_static/rsvd_multiple.csv
   cell_length: 100
-  additional_flow_nodes: 50
+  additional_flow_nodes: [50]
   additional_node_candidates: 1000
   hull_factor: 1.2
   random_seed: 123456
@@ -55,11 +55,16 @@ ert:
     max_running: 50
   ensemble_weights: [4, 2, 1, 1, 1, 1, 1, 1, 1, 1]
   analysis:
-    metric: [RMSE]
-    quantity: ['WOPR:', 'WOPT:', 'WWPR:', 'WWPT:', 'WGPR:', 'WGPT:', 'WBHP:']
-    start: 1997-11-06
-    end: 2005-01-31
-    outfile: exp00_analysis_metrics_history
+    - metric: [RMSE]
+      quantity: ['WOPR:', 'WOPT:', 'WWPR:', 'WWPT:', 'WGPR:', 'WGPT:', 'WBHP:']
+      start: 1997-11-06
+      end: 2005-01-31
+      outfile: exp00_analysis_metrics_history
+    - metric: [RMSE]
+      quantity: ['WOPR:', 'WOPT:', 'WWPR:', 'WWPT:', 'WGPR:', 'WGPT:', 'WBHP:']
+      start: 2005-01-31
+      end: 2006-12-01
+      outfile: exp00_analysis_metrics_test
 
 model_parameters:
   permeability:
