--- a/brugge/config/prediction.yml
+++ b/brugge/config/prediction.yml
@@ -11,3 +11,8 @@ ert:
     system: LOCAL  # LOCAL or LSF
     name: mr  # ignored when system is LOCAL
     max_running: 5  # Maximum number of simultaneous runs
+
+export:
+  csv_outfile: brugge_flownet_predictions
+  quantity: [WOPR, WWPR, WBHP]
+  end_date: 2020-01-01
